# semantic_search

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  bedrock_config.json  buildspec.yml  main.py  pyproject.toml  run_data_and_testing.sh  test_bedrock_json_server.sh  test_bedrock_pg_server.sh  test_bedrock_policies_server.sh  test_spot_csv_server.sh  test_spot_json_server.sh  test_spot_mongo_server.sh
bedrock_index/: metadata.json
config/: README.md  app.yaml
config/examples/: app.basic.yaml  app.bedrock.yaml  app.premium.yaml  app.sagemaker.yaml
config/sources/: articles.yaml  auto_parts.yaml  candidates.yaml  policies.yaml  products.yaml  sample_csv.yaml  support_tickets.yaml
csv_spot_index/: metadata.json
docs/: PRD-semantic-search.md  cost_optimisation.md  security_architecture.md  technical_approach.md
docs/process_flows/: 01-end-to-end-system-flow.md  02-data-ingestion-indexing.md  03-search-query-flow.md  04-embedding-provider-selection.md  05-infrastructure-deployment.md  06-observability-alerting.md
docs/runbooks/: index_build.md  runtime_deploy.md
frontend/: README.md  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
infrastructure/: README.md
infrastructure/bootstrap/: backend-resources.tf
pg_bedrock_index/: metadata.json
scripts/: generate_csv_index.py  generate_index.py  generate_json_index.py  generate_mongo_index.py  generate_pg_index.py  generate_test_index.py  readme_to_pdf.py  seed_mongodb.py
semantic_search/: __init__.py  db_indexing.md
semantic_search/config/: __init__.py  app.py  display.py  metadata.py  models.py  source.py
test_index/: metadata.json
(+130 files in other folders)
