[project]
name = "semantic-search"
version = "0.1.0"
description = "An LLM-powered semantic search pipeline for internal data sources."
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "boto3>=1.34,<2.0",
    "numpy>=1.24,<2.0",
    "fastapi>=0.111.0,<1.0",
    "pydantic>=2.7,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0.48,<3.0",
    "pymongo>=4.6,<5.0",
    "pyyaml>=6.0,<7.0",
    "PyJWT[crypto]>=2.8,<3.0",
]

[project.scripts]
semantic-search = "semantic_search.runtime.cli:main"
semantic-search-eval = "semantic_search.evaluation.cli:main"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]
python_files = "test_*.py"
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "httpx>=0.27.0,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "locust>=2.29,<3.0",
    "mongomock>=4.1",
]
